Autoincrement lastmod field and add on first post.

--- a/public/404.html
+++ b/public/404.html
@@ -47,8 +47,8 @@
     
 
     <script>
-      window.lightTheme = ''
-      window.darkTheme = ''
+      window.lightTheme = 'emerald'
+      window.darkTheme = 'forest'
 
       ;(function() {
         const isDark = ('hugo-theme-dream-is-dark' in localStorage)
@@ -236,7 +236,7 @@
 
   <div>
   
-  <p>© 2025 My big bazar</p>
+  <p>© 2026 My big bazar</p>
   
 
   
@@ -296,12 +296,10 @@
         <div class="card-title">About me</div>
 
         <div class="prose dark:prose-invert">
-          <p>Hi! I&rsquo;m &hellip;</p>
-<ul>
-<li>I write about science (notes, explanations, experiments)</li>
-<li>I also write personal stuff (journal, ideas, projects)</li>
-</ul>
-<p>Welcome to my big bazar.</p>
+          <p>Hi! I’m a young data scientist— and, dare I say, a humanist too.<br>
+I like studying a bit of everything, and this blog is my place to collect those curiosities: ideas, readings, side projects, and whatever else catches my attention.</p>
+<p>I hope you find something interesting here.</p>
+<p>Welcome to my big bazaar.</p>
 
         </div>
       </div>
@@ -322,7 +320,7 @@
 
   <div>
   
-  <p>© 2025 My big bazar</p>
+  <p>© 2026 My big bazar</p>
   
 
   
